# arch_project

./: CMakeLists.txt  README.md
src/: archivator_manager.cpp  archivator_manager.h  file.cpp  file.h  frequency_processor.cpp  frequency_processor.h  haffman.cpp  haffman.h  main.cpp  tree.cpp  tree.h
src/tests/: CMakeLists.txt  test_file.h  test_freq_processor.h  tests.cpp
